# work-agent

./: .gitignore  AGENTS.md  CODEBUDDY.MD  README.md  pyproject.toml  通用Agent架构调研与设计报告.md
.github/workflows/: ci.yml
agent/: __init__.py  cli.py  subagent.py
agent/config/: __init__.py  settings.example.yaml  settings.py
agent/context/: __init__.py  manager.py  session_recovery.py  session_store.py  tokens.py
agent/context/compactors/: __init__.py  auto_compact.py  microcompact.py  session_memory.py
agent/core/: __init__.py  control_tools.py  events.py  intent.py  loop.py  model.py  plan.py  presenter.py  prompts.py  session.py  session_command.py  transport.py
agent/daemon/: __init__.py  bridge.py  client.py  protocol.py  registry.py  server.py
agent/obs/: __init__.py  store.py  tracer.py
agent/prompts/: compact_system.md  compact_user.md  system.md
agent/resilience/: __init__.py  circuit_breaker.py  fallback.py  health.py  pipeline.py  rate_limiter.py
agent/runtime/: __init__.py  _subagent_tui_transport.py  approval.py  registry.py  sandbox.py  terminal_transport.py  textual_transport.py
agent/skills/: __init__.py  loader.py  spec.py
agent/testing/: recorded_model.py
agent/tools/: __init__.py  bash.py  fs.py
agent/tui/: __init__.py  app.py  render.py  screens.py  tui.tcss  widgets.py
desktop/: README.md  electron.vite.config.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
desktop/scripts/: check-msgtype.mjs  check-regex.mjs  smoke-daemon.mjs  smoke-sessions.mjs
desktop/src/main/: daemon.ts  index.ts  python.ts  settings.ts
desktop/src/preload/: index.ts
desktop/src/protocol/: client.test.ts  client.ts  events.test.ts  events.ts  types.ts
desktop/src/renderer/: App.tsx  index.html  main.tsx  theme.css  vite-env.d.ts
desktop/src/shared/: daemon-config.ts  global.d.ts
docs/: 上下文与记忆体系介绍.md  沙箱体系介绍.md  测试体系介绍.md
knowledge/: INDEX.md  claude-code-context-management.md  claude-code-subagents-skills.md  context-management.md  sandbox-approval-design.md  调研-CLI美化方案.md  调研-Textual全屏CLI重构方案.md  调研-agent-cli渲染与runner交互.md
milestones/: M-refactor-统一传输层与事件线格式.md  README.md  template.md
milestones/M1-骨架/: 1.1-项目脚手架与Model抽象.md  1.2-工具注册与内置工具.md  1.3-ReAct循环与事件流.md  1.4-PLAN模式.md  1.5-意图澄清.md  1.6-CLI入口与最简可观测.md  README.md
milestones/M2-安全与确认/: 2.1-沙盒执行层.md  2.2-审批门.md  2.3-分层权限配置.md  2.4-工具与循环集成.md  2.5-CLI与HITL交互.md  2.6-测试与验收.md  README.md
milestones/M3-可观测与韧性层/: 3.1-Tracer增强与持久化.md  3.2-韧性层核心.md  3.3-韧性层Pipeline与集成.md  3.4-健康检查与CLI.md  3.5-测试与验收.md  README.md
milestones/M4-上下文与记忆/: 4.1-ContextManager基础.md  4.2-Microcompact.md  4.3-AutoCompact.md  4.4-SessionMemoryCompact.md  4.5-集成与固定底座.md  4.6-CLI命令.md  4.7-测试与验收.md  README.md
milestones/M5-扩展能力/: 5.1-SkillLoader基础.md  5.2-SubagentSpawner.md  5.3-集成与工具白名单.md  5.4-CLI命令.md  5.4.1-后台Agent介绍.md  5.5-测试与验收.md  README.md
milestones/M6-生产化/: 6.1-SessionStore基础设施.md  6.2-会话恢复流程.md  6.3-测试分层重构.md  6.4-CI工作流.md  6.5-端到端验收.md  README.md  调研.md
milestones/M7-agentrunner守护进程分离/: M7.1-daemon骨架.md  M7.2-协议层.md  M7.3-CLI客户端.md  M7.4-session切换回放.md  M7.5-与run-chat共存.md  M7.6-安全与端到端验收.md  README.md
milestones/M8-CLI全屏重构/: M8.0-依赖与骨架.md  M8.1-TextualTransport事件桥接.md  M8.2-输入与chat循环.md  M8.3-HITL模态.md  M8.4-流式工具块diff高亮.md  M8.5-主题命令面板状态栏.md  M8.6-子agent渲染接入与验收.md  M8.7-迁移切换.md  README.md
milestones/M9-Electron桌面客户端/: M9.0-daemon多项目感知.md  M9.1-Electron外壳与daemon生命周期.md  M9.2-TS协议客户端库.md  M9.3-项目管理与多会话.md  M9.4-流式渲染与工具块.md  M9.5-HITL模态与审批可视化.md  M9.6-设置面板与命令面板.md  M9.7-可观测面板.md  README.md
scripts/: cleanup_test_artifacts.py
tests/: conftest.py  test_approval.py  test_cli.py  test_context.py  test_daemon.py  test_health.py  test_integration.py  test_intent.py  test_loop.py  test_m45_integration.py  test_model.py  test_obs.py  test_plan.py  test_protocol.py  test_resilience.py  test_session_command.py  test_session_store.py  test_settings.py  test_skills.py  test_subagent.py  test_tools.py
tests/e2e/: test_e2e_resume_fork.py  test_fork_e2e.py  test_recovery_e2e.py  test_tape_record_slow.py
tests/integration/: test_client.py  test_daemon.py  test_integration.py  test_m45_integration.py  test_prompt_snapshot.py  test_tool_tapes.py
tests/unit/: test_approval.py  test_cli.py  test_context.py  test_health.py  test_intent.py  test_loop.py  test_m9_protocol_contract.py  test_model.py  test_obs.py  test_plan.py  test_protocol.py  test_registry.py  test_resilience.py  test_sandbox.py  test_session_command.py  test_session_recovery.py  test_session_store.py  test_settings.py  test_skills.py  test_subagent.py  test_tools.py  test_tui.py
(+46 files in other folders)
