[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "work-agent"
version = "0.1.0"
description = "通用编码 Agent（类 Claude Code / Codex）"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "openai>=1.30",
    "jinja2>=3.1",
    "rich>=13.0",
    "websockets>=12.0",
    "prompt_toolkit>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff==0.16.0",  # 锁版本：未锁定会导致 CI 拉取最新 ruff 后格式化行为漂移（markdown 代码块排版）致 format 门禁失败
    "pytest-xdist>=3.5",
    "basedpyright==1.39.9",  # 锁版本：类型检查器版本漂移同样可能导致 CI 误报，与本地保持一致
    "textual>=0.80",  # M8 全屏 TUI（headless run_test 测试依赖）
]
# M8 全屏 TUI：仅 TUI 路径需要的依赖，与核心解耦（核心依赖不强制引入）。
tui = [
    "textual>=0.80",
]

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
# 默认跳过慢测（e2e / 非确定）；`pytest -m slow` 单独跑；Tier1/Tier2 每次 commit 必跑。
addopts = "-m 'not slow'"
markers = [
    "unit: 快速、确定、零成本的单元测试（默认跑）",
    "integration: 集成测试（loop+tools / daemon over websockets，默认跑）",
    "e2e: 端到端测试（完整会话跨重启，非确定或慢）",
    "slow: 慢 / 非确定测试（nightly 或手动，默认跳过）",
]

[tool.basedpyright]
# 采用业界通行的 standard 模式：保留有价值的类型检查（未定义、参数不匹配、返回类型等），
# 关闭针对第三方未完全标注 SDK（如 openai 流式响应）的过度严格噪音（reportAny/reportExplicitAny/
# reportUnknownMemberType 等）。如需更严格，可改为 "strict" 并逐项标注。
typeCheckingMode = "standard"
pythonVersion = "3.12"
# 仅对生产代码（agent）与脚本（scripts）做类型检查；tests 通过 pytest 实跑保证正确，
# 其大量 mock/fake 故意与协议不完全一致，纳入会引入与运行时无关的类型噪音。
include = ["agent", "scripts"]

# ---- ruff：lint + format（CI 门禁之一）----
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["agent"]

[tool.ruff.lint]
# 选一组务实、低噪音的规则集；如需更严格可逐步加 I(import 排序)/UP(pyupgrade)/B(bugbear)。
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes (未定义/未使用/重定义)
    "W",   # pycodestyle warnings
    "I",   # isort 导入排序
    "UP",  # pyupgrade (现代化语法)
    "B",   # flake8-bugbear (易错模式)
]
ignore = [
    "E501",  # 行长由 formatter 管理，lint 不报
]

[tool.ruff.lint.isort]
known-first-party = ["agent"]

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"

# ---- coverage：CI 生成 xml 给 codecov/PR 展示 ----
[tool.coverage.run]
source = ["agent"]
branch = true
omit = ["tests/*", "agent/testing/*"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@overload",
]
